--- a/Code/Positioning/position.html
+++ b/Code/Positioning/position.html
@@ -12,8 +12,10 @@
     <p id="special">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quia aspernatur doloremque ex sequi, optio tenetur, accusantium neque cupiditate sapiente odio temporibus ea mollitia, perferendis provident. Porro quo quasi optio.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo quia aspernatur doloremque ex sequi, optio tenetur, accusantium neque cupiditate sapiente odio temporibus ea mollitia, perferendis provident. Porro quo quasi optio.</p> -->
     <h1>Positioning</h1>
-    <div class="box"></div>
-    <div class="box special"></div>
-    <div class="box"></div>
+    <div class="box">
+        <span> hi</span>
+    </div>
+    <!-- <div class="box special"></div>
+    <div class="box"></div> -->
 </body>
 </html>
